# pfp-data-structures

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: yeast.fasta.occ  yeast.fasta.parse
include/: CMakeLists.txt
include/common/: CMakeLists.txt  common.hpp  strdup.hpp
include/pfp/: CMakeLists.txt  dictionary.hpp  lce_support.hpp  parse.hpp  pfp.hpp  sa_support.hpp  wt.hpp
pipeline/: pfp_ds  pfp_ds.thresholds
test/src/: CMakeLists.txt  ds_building.cpp  ds_building_custom.cpp  ds_building_wt_sdsl.cpp  ds_building_wt_sdsl_2.cpp  lce_benchmark.cpp  lce_test.cpp  pfp_benchmarks.cpp  pfp_ds_test.cpp  pfp_load_test.cpp  pfp_test.cpp  pfp_thresholds.cpp  sa_benchmark.cpp  sa_test.cpp  sdsl_baseline_csa.cpp  sdsl_baseline_cst.cpp  sdsl_load_test.cpp  sdsl_wt_test.cpp
